<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cream"
    android:id="@+id/main"
    tools:context=".ProfilActivity">

    <!-- HEADER / TITLE -->
    <TextView
        android:id="@+id/tvPflHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvPflHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Foto Profil -->
            <!-- Lingkaran luar (GARIS HIJAU) -->
            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="65dp"
                app:cardBackgroundColor="@color/orange"
                app:cardElevation="0dp">

                <!-- Lingkaran dalam (PUTIH) -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="60dp"
                    app:cardBackgroundColor="@color/orange_muda"
                    app:cardElevation="0dp">

                    <!-- Foto Profil -->
                    <ImageView
                        android:id="@+id/imgPflFoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_profil"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>


            <!-- Nama -->
            <TextView
                android:id="@+id/tvPflNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_nama"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <!-- Email -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgPflLogoEmail"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tvPflEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_email"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="8dp" />
            </LinearLayout>


            <!-- Phone -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgPflLogoTelepon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tvPflTelepon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_telp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="8dp" />
            </LinearLayout>


            <!-- Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_pa"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="30dp" />

            <!-- MENU EDIT PROFIL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card_menu_profil">
                <LinearLayout
                    android:id="@+id/menu_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="20dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/imgPflLogoEdtProfil"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_edit" />
                    <TextView
                        android:id="@+id/tvPflEdtProfil"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="12dp"
                        android:text="@string/profil_edt_profil"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black" />
                    <ImageView
                        android:id="@+id/imgPflEdtProfilArrowRight"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>
            </LinearLayout>

            <!-- MENU TENTANG APLIKASI -->
            <LinearLayout
                android:id="@+id/menuTentangApk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:orientation="vertical"
                android:background="@drawable/bg_card_menu_profil"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="20dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/imgPflLogoTentangApk"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_notification" />
                    <TextView
                        android:id="@+id/tvPflTentangApk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="12dp"
                        android:text="@string/profil_tentang_apk"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/imgPflTentangApkArrowRight"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/arrow_right" />
                </LinearLayout>
            </LinearLayout>

            <!-- Logout -->
            <LinearLayout
                android:id="@+id/btn_logout_profil"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_logout_button_profil"
                android:paddingHorizontal="20dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_logout" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/profil_logout"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>